--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - cmake >=2.8.8
     - ninja
   host:
-    - hdf5 
+    - hdf5
     - hdf4
     - jpeg
     - zlib
@@ -44,7 +44,7 @@ test:
 
 about:
   home: https://github.com/nexusformat/code
-  license: LGPL-2.1
+  license: LGPL-2.1-or-later
   license_file: COPYING
   summary: NeXus is a common data format for neutron, x-ray, and muon science
   description: |
